v2.2.0 - Add tcl2emf and georef to CI, improve PDF handling
